--- a/index.html
+++ b/index.html
@@ -19,344 +19,16 @@
 <div id="content">Loading...</div>
 <div id="error"></div>
 
-<script>
-	window.state = {
-		isSignedIn: false,
-		pageToken: -1,
-		isActive: true
-	};
-
-	// Client ID and API key from the Developer Console
-	const CLIENT_ID = '360768471837-s7u2be5g89i1d4s4n35gp5d2p5m6mgg9.apps.googleusercontent.com';
-	const API_KEY = 'AIzaSyA8blW19Y2bKxKJIf1S41Vss1ZyXKQn6Xw';
-
-	// Array of API discovery doc URLs for APIs used by the quickstart
-	const DISCOVERY_DOCS = ['https://sheets.googleapis.com/$discovery/rest?version=v4', 'https://www.googleapis.com/discovery/v1/apis/drive/v3/rest'];
-
-	// Authorization scopes required by the API; multiple scopes can be
-	// included, separated by spaces.
-	const SCOPES = 'https://www.googleapis.com/auth/spreadsheets https://www.googleapis.com/auth/drive.readonly';
-
-	const authorizeButton = document.getElementById('authorize_button');
-	const signoutButton = document.getElementById('signout_button');
-
-	/**
-	 * Returns a reference to the first object with the specified value of the ID or NAME attribute.
-	 * An alias to Document.getElementById
-	 * @param id String that specifies the ID value. Case-insensitive.
-	 * @return HTMLElement | null
-	 */
-	function ele(id) {
-		return document.getElementById(id);
-	}
-
-
-	/**
-	 * Returns the first element that is a descendant of node that matches selectors.
-	 * An alias to Document.querySelector
-	 * @param selectors String
-	 * @return Element | null
-	 */
-	function query(selectors) {
-		return document.querySelector(selectors);
-	}
-
-	/**
-	 *  Initializes the API client library and sets up sign-in state
-	 *  listeners.
-	 */
-	async function initClient() {
-		await gapi.client.init({
-			apiKey: API_KEY,
-			clientId: CLIENT_ID,
-			discoveryDocs: DISCOVERY_DOCS,
-			scope: SCOPES
-		});
-		// Listen for sign-in state changes.
-		gapi.auth2.getAuthInstance().isSignedIn.listen(updateSignInStatus);
-		// Handle the initial sign-in state.
-		updateSignInStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
-		authorizeButton.onclick = handleAuthClick;
-		signoutButton.onclick = handleSignoutClick;
-	}
-
-	/**
-	 *  Called when the signed in status changes, to update the UI
-	 *  appropriately. After a sign-in, the API is called.
-	 */
-	function updateSignInStatus(isSignedIn) {
-		state.isSignedIn = isSignedIn;
-		if (isSignedIn) {
-			authorizeButton.style.display = 'none';
-			signoutButton.style.display = 'block';
-		} else {
-			authorizeButton.style.display = 'block';
-			signoutButton.style.display = 'none';
-		}
-		router();
-	}
-
-	/**
-	 *  Sign in the user upon button click.
-	 */
-	function handleAuthClick(event) {
-		gapi.auth2.getAuthInstance().signIn().catch((ignore) => {});
-	}
-
-	/**
-	 *  Sign out the user upon button click.
-	 */
-	function handleSignoutClick(event) {
-		gapi.auth2.getAuthInstance().signOut().catch((ignore) => {});
-	}
-
-	/**
-	 * @param form HTMLFormElement
-	 */
-	function submitNewSpreadsheetForm(form) {
-		console.log(form);
-		const name = ele("spreadSheetName");
-		name.value;
-		gapi.client.sheets.spreadsheets.create({
-			resource: {
-				properties: {
-					title: name.value
-				},
-				sheets: [
-					{
-						data: {
-							startRow: 0,
-							rowData: [
-								{
-									values: [
-										{
-											userEnteredValue: {
-												stringValue: "Date"
-											}
-										},
-										{
-											userEnteredValue: {
-												stringValue: "Hours"
-											}
-										},
-										{
-											userEnteredValue: {
-												stringValue: "Category"
-											}
-										},
-										{
-											userEnteredValue: {
-												stringValue: "Comment"
-											}
-										}
-									]
-								}
-							]
-						}
-					}
-				],
-			},
-		}).then((response) => {
-			console.log("Created", response);
-			window.location.href = `#sheet/${response.result.spreadsheetId}`;
-		}, (e) => {
-			uncaughtErrorHandler(e);
-		});
-		closeNewSpreadsheetForm();
-		return false;
-	}
-
-	function closeNewSpreadsheetForm() {
-		ele("newSpreadsheetForm").reset();
-		ele("newSpreadsheetContainer").style.display = "none";
-	}
-
-	/**
-	 * The content area will display a list of all non-trashed sheets within the folders named "Timesheets".
-	 */
-	async function timesheetsList() {
-		const content = ele("content");
-		const foldersResponse = await gapi.client.drive.files.list({
-			"q": "name = 'Timesheets' and mimeType = 'application/vnd.google-apps.folder' and trashed = false"
-		});
-
-		content.innerHTML = `<button onclick="ele('newSpreadsheetContainer').style.display = ''; ele('spreadSheetName').focus();">Create New Timesheet</button>
-<div id="newSpreadsheetContainer" style="display: none">
-	<h3>Create Timesheet</h3>
-	<form id="newSpreadsheetForm" action="#list/" onsubmit="return submitNewSpreadsheetForm(this);">
-		<label>Name:</label>
-		<input id="spreadSheetName" type="text" required>
-		<input type="submit">
-	</form>
-
-</div>
-		`;
-
-		ele("newSpreadsheetContainer").onkeydown = (e) => {
-			if (e.keyCode === 27) {
-				closeNewSpreadsheetForm();
-			}
-		};
-
-		const ul = document.createElement("ul");
-		content.appendChild(ul);
-		for (const timesheetFolder of foldersResponse.result.files) {
-			const timesheetsResponse = await gapi.client.drive.files.list({
-				"q": `'${timesheetFolder.id}' in parents and mimeType != 'application/vnd.google-apps.folder' and trashed = false`
-			});
-			console.log(timesheetsResponse);
-			for (const timesheet of timesheetsResponse.result.files) {
-				console.log(timesheet);
-				const li = document.createElement("li");
-				ul.appendChild(li);
-				const a = document.createElement("a");
-				a.innerText = timesheet.name;
-				a.href = "#sheet/" + timesheet.id;
-				li.appendChild(a);
-			}
-		}
-	}
-
-	/**
-	 * Sets the content area UI to edit the given timesheet.
-	 * @param spreadsheetId String The timesheet to edit.
-	 * @return {Promise<void>}
-	 */
-	async function editSheet(spreadsheetId) {
-		const content = ele("content");
-
-		content.innerHTML = `<p><a href='#list'>< List</a></p>
-<div id="timesheetTableContainer">
-	<table id="timesheetTable">
-		<thead>
-		<tr>
-			<th>Date</th>
-			<th>Hours</th>
-			<th>Category</th>
-			<th>Comment</th>
-		</tr>
-		</thead>
-		<tbody>
-		</tbody>
-	</table>
-</div>`;
-
-		const body = query("#timesheetTable > tbody");
-
-		const response = await gapi.client.sheets.spreadsheets.values.get({
-			spreadsheetId: spreadsheetId,
-			range: "A2:D"
-		});
-
-		if (response.result.values !== undefined) {
-			for (let i = 0; i < response.result.values.length; i++) {
-				const row = response.result.values[i];
-				const tr = createTimeRow(i, row);
-				body.appendChild(tr);
-			}
-		}
-
-		console.log("values response", response);
-	}
-
-	/**
-	 * Adds a timesheet row to the table body.
-	 */
-	function createTimeRow(index, row) {
-		const tr = document.createElement("tr");
-
-		const dateTd = document.createElement("td");
-		dateTd.innerHTML = row[0] || "";
-		tr.appendChild(dateTd);
-
-		const hoursTd = document.createElement("td");
-		hoursTd.innerHTML = row[1] || "";
-		tr.appendChild(hoursTd);
-
-		const categoryTd = document.createElement("td");
-		categoryTd.innerHTML = row[2] || "";
-		tr.appendChild(categoryTd);
-
-		const commentsTd = document.createElement("td");
-		commentsTd.innerHTML = row[3] || "";
-		commentsTd.tabIndex = 0;
-		commentsTd.onfocus = () => {
-
-		}
-		tr.appendChild(commentsTd);
-
-		return tr;
-	}
-
-	function router() {
-		ele("content").innerHTML = "";
-		if (!state.isSignedIn) return;
-
-		const hash = location.hash;
-
-		/**
-		 * @param hash String
-		 * @return {Promise<void>}
-		 */
-		const hashToPromise = (hash) => {
-			if (hash === "") {
-				// Location not explicit, go to the last edited sheet or the list.
-				const sheetId = localStorage.getItem("lastSheet");
-				if (sheetId == null) return timesheetsList(); else return editSheet(sheetId);
-			} else if (hash.startsWith("#list")) {
-				localStorage.removeItem("lastSheet");
-				return timesheetsList();
-			} else if (hash.startsWith("#sheet/")) {
-				const sheetId = hash.substr("#sheet/".length);
-				localStorage.setItem("lastSheet", sheetId);
-				return editSheet(sheetId);
-			} else {
-				return timesheetsList();
-			}
-		}
-		hashToPromise(hash).catch(uncaughtErrorHandler);
-	}
-
-	window.addEventListener('hashchange', router, false);
-
-	async function getChangesStartToken() {
-		if (state.pageToken !== -1) return;
-		const tokenResponse = await gapi.client.drive.changes.getStartPageToken();
-		state.pageToken = tokenResponse.result.startPageToken;
-		console.log("pageToken", state.pageToken);
-	}
-
-	async function pollChanges() {
-		if (!state.isSignedIn || !state.isActive || state.pageToken === -1) return;
-		const changesListResponse = await gapi.client.drive.changes.list({
-			pageToken: state.pageToken,
-			pageSize: 1000
-		});
-		const changedFiles = changesListResponse.result.changes.map(change => change.fileId);
-		console.log("changedFiles ", changedFiles);
-		state.pageToken = changesListResponse.result.nextPageToken || changesListResponse.result.newStartPageToken;
-		console.log("Polled changes", state.pageToken);
-	}
-
-	window.addEventListener("focus", (e) => {
-		state.isActive = true;
-		// pollChanges();
-	});
-	window.addEventListener("blur", (e) => {
-		state.isActive = false;
-	});
-	// setInterval(pollChanges, 5000);
-</script>
+<script src="main.js"></script>
 
 <script src="https://apis.google.com/js/api.js"></script>
 <script>
-
 	/**
 	 * @param e Error
 	 */
 	function uncaughtErrorHandler(e) {
 		console.log(e);
-		ele("error").innerText = e.message || e.result.error.message;
+		ele("error").innerText = e.message || e.details || e.result.error.message;
 	}
 
 	window.onerror = uncaughtErrorHandler;
