Add release action
Add fav icon
Add privacy policy

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Time</title>
+	<title>PolyForest® Time</title>
 	<meta charset="utf-8"/>
 	<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<link href="default.css" type="text/css" rel="stylesheet">
+
+	<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff8a01">
 </head>
 <body>
 <h1>Time</h1>
