--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
 	<title>PolyForest® Time</title>
+	<meta name="description" content="Simple Time Tracking via Google Sheets API">
 	<meta charset="utf-8"/>
 	<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<link href="default.css" type="text/css" rel="stylesheet">
 
-	<link rel="icon" type="image/svg+xml" href="/favicon.svg">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff8a01">
+	<link rel="icon" type="image/svg+xml" href="./favicon.svg">
+	<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#ef8e0c">
 </head>
 <body>
 <h1>Time</h1>
