--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
 	<link rel="icon" type="image/svg+xml" href="./favicon.svg">
 	<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#ef8e0c">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>Time</h1>
 
 <div id="auth">
+	<img src="favicon.svg" height="64px">
+	<h3 class="appTitle">PolyForest® Time</h3>
 	<!--Add buttons to initiate auth sequence and sign out-->
 	<button id="authorize_button" style="display: none;">Log In</button>
 	<button id="signout_button" style="display: none;">Sign Out</button>
