--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,6 +1,8 @@
 <h1>Privacy Policy for PolyForest</h1>
 
-<p>At PolyForest, accessible from https://polyforest.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by PolyForest and how we use it.</p>
+<p>At PolyForest time, accessible from https://time.polyforest.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by PolyForest and how we use it.</p>
+
+<p>PolyForest Time uses Google services, whose privacy policy may be found separately at <a href="https://policies.google.com/privacy" title="Google Privacy Policy">https://policies.google.com/privacy</a></p>
 
 <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
 
