Update privacy policy and terms of service

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>PolyForest® Time</title>
+	<title>PolyForest&reg; Time</title>
 	<meta name="description" content="Simple Time Tracking via Google Sheets API">
 	<meta charset="utf-8"/>
 	<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
@@ -18,14 +18,14 @@
 
 <div id="auth">
 	<img src="favicon.svg" style="height: 70px">
-	<h3 class="appTitle">PolyForest® Time</h3>
+	<h3 class="appTitle">PolyForest&reg; Time</h3>
 	<!--Add buttons to initiate auth sequence and sign out-->
 	<button id="authorizeButton" class="withIcon" style="display: none;"><i class="material-icons">account_box</i> Log In</button>
 	<button id="signoutButton" class="withIcon" style="display: none;"><i class="material-icons">account_box</i> Sign Out</button>
 </div>
 
 <div id="descriptionSection" style="display: none;">
-	<p>PolyForest® Time is a no-frills time tracking utility that logs time to your <a href="https://drive.google.com"><img src="https://firebasestorage.googleapis.com/v0/b/drive-assets.google.com.a.appspot.com/o/Asset%20-%20Google%20Drive%20Lockup.svg?alt=media&token=4649c767-bee1-4da5-a242-713857615034" style="height: 40px; margin-bottom: -11px;" alt="Google Drive"></a></p>
+	<p>PolyForest&reg; Time is a no-frills time tracking utility that logs time to your <a href="https://drive.google.com"><img src="https://firebasestorage.googleapis.com/v0/b/drive-assets.google.com.a.appspot.com/o/Asset%20-%20Google%20Drive%20Lockup.svg?alt=media&token=4649c767-bee1-4da5-a242-713857615034" style="height: 40px; margin-bottom: -11px;" alt="Google Drive"></a></p>
 	<p><a href="javascript:handleAuthClick();">Log In</a> to your Google account in order to quickly create time sheets.</p>
 
 </div>
