--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,14 +1,26 @@
-<h1>Privacy Policy for PolyForest</h1>
+<h1>Privacy Policy for PolyForest&reg; Time</h1>
 
-<p>At PolyForest time, accessible from https://time.polyforest.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by PolyForest and how we use it.</p>
+<p>PolyForest Time is a web application that logs time records to Google Sheets. It is accessible via the web at <a href="https://time.polyforest.com">https://time.polyforest.com</a>.</p>
 
-<p>PolyForest Time uses Google services, whose privacy policy may be found separately at <a href="https://policies.google.com/privacy" title="Google Privacy Policy">https://policies.google.com/privacy</a></p>
+<p>At PolyForest, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by PolyForest and how we use it.</p>
 
-<p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
+<h2>Google Services</h2>
 
-<h2>Log Files</h2>
+<p>When logging into your Google Account using PolyForest Time, you are granting granting access to various information provided by Google in order for our software to work. Poly Forest, LLC does not collect or store <em>any</em> of this information on our servers.</p>
+<p>By logging in, the Google account information you are voluntarily providing:</p>
+<ul>
+	<li>Basic Google Profile information such as name, email address, and profile picture</li>
+	<li>Any personal info you've made publicly available</li>
+	<li>View and manage Google Drive files and folders that you have opened or created with this app</li>
+	<li>View files from Google Drive that you have opened with this app or that are shared publicly</li>
+	<li>Save changes to files that you have opened with this app </li>
+	<li>Create new files in Google Drive using this app</li>
+	<li>View folders and their contents from Google Drive that you have opened with this app</li>
+	<li>Make changes to folders and their contents that you have opened with this app</li>
+	<li>Delete contents of folders that you have opened with this app</li>
+</ul>
 
-<p>PolyForest follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information. Our Privacy Policy was created with the help of the <a href="https://www.privacypolicyonline.com/privacy-policy-generator/">Privacy Policy Generator</a> and the <a href="https://www.generateprivacypolicy.com">Privacy Policy Generator</a>.</p>
+<p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us. We can be reached by our contact form at <a href="https://www.polyforest.com">https://www.polyforest.com</a></p>
 
 <h2>Cookies and Web Beacons</h2>
 
@@ -16,21 +28,15 @@
 
 <p>For more general information on cookies, please read the "What Are Cookies" article on <a href="https://www.cookieconsent.com/what-are-cookies/">Cookie Consent website</a>.</p>
 
+<h2>Third Party Services</h2>
 
+<p>PolyForest Time uses the following third party services, and their respective Privacy Policy documents:</p>
 
-<h2>Privacy Policies</h2>
+<ul>
+	<li>Google Drive - <a href="https://policies.google.com/privacy" title="Google Privacy Policy">https://www.google.com/drive/terms-of-service/</a></li>
+</ul>
 
-<P>You may consult this list to find the Privacy Policy for each of the advertising partners of PolyForest.</p>
-
-<p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on PolyForest, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
-
-<p>Note that PolyForest has no access to or control over these cookies that are used by third-party advertisers.</p>
-
-<h2>Third Party Privacy Policies</h2>
-
-<p>PolyForest's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. </p>
-
-<p>You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites. What Are Cookies?</p>
+<p>PolyForest has no access to or control over cookies that are used by third-party services. We urge you to read and understand the privacy policies of this list.</p>
 
 <h2>Children's Information</h2>
 
