--- a/tos.html
+++ b/tos.html
@@ -2,7 +2,7 @@
 
 <p>Welcome to PolyForest&reg; Time!</p>
 
-<p>These terms and conditions outline the rules and regulations for the use of PolyForest Time's Website, located at https://time.polyforest.com.</p>
+<p>These terms and conditions outline the rules and regulations for the use of PolyForest Time's Website, located at <a href="https://time.polyforest.com">https://time.polyforest.com</a>.</p>
 
 <p>The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company's terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves.</p>
 
