--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 <div id="error"></div>
 
 <footer>
-	<a href="https://polyforest.com">Copyright 2020 Poly Forest, LLC.</a> <a href="tos.html">Terms of Service</a> <a href="privacypolicy.html">Privacy Policy</a>
+	<a href="https://polyforest.com">Copyright 2020 Poly Forest, LLC.</a>
+	<a href="tos.html">Terms of Service</a>
+	<a href="privacypolicy.html">Privacy Policy</a>
+	<a href="https://groups.google.com/u/1/a/polyforest.com/g/polyforest-time">Forum</a>
 </footer>
 </body>
 
