Add open source link and license

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 
 <div id="descriptionSection" style="display: none;">
-	<p>PolyForest&reg; Time is a no-frills time tracking utility that logs time to your <a href="https://drive.google.com"><img src="https://firebasestorage.googleapis.com/v0/b/drive-assets.google.com.a.appspot.com/o/Asset%20-%20Google%20Drive%20Lockup.svg?alt=media&token=4649c767-bee1-4da5-a242-713857615034" style="height: 40px; margin-bottom: -11px;" alt="Google Drive"></a></p>
+	<p>PolyForest&reg; Time is a no-frills, open source, time tracking utility that logs time to your <a href="https://drive.google.com"><img src="https://firebasestorage.googleapis.com/v0/b/drive-assets.google.com.a.appspot.com/o/Asset%20-%20Google%20Drive%20Lockup.svg?alt=media&token=4649c767-bee1-4da5-a242-713857615034" style="height: 40px; margin-bottom: -11px;" alt="Google Drive"></a></p>
 	<p><a href="javascript:handleAuthClick();">Log In</a> to your Google account in order to quickly create time sheets.</p>
 
 </div>
@@ -40,9 +40,10 @@
 
 <footer>
 	<a href="https://polyforest.com">Copyright 2020 Poly Forest, LLC.</a>
+	<a href="https://github.com/polyforest/timesheet">Source</a>
+	<a href="https://groups.google.com/u/1/a/polyforest.com/g/polyforest-time">Forum</a>
 	<a href="tos.html">Terms of Service</a>
 	<a href="privacypolicy.html">Privacy Policy</a>
-	<a href="https://groups.google.com/u/1/a/polyforest.com/g/polyforest-time">Forum</a>
 </footer>
 </body>
 
