--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 		  rel="stylesheet">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-792BQWDQ9X"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-792BQWDQ9X');
+</script>
+
 <body>
 
 <div id="mainProgressBar" class="progressBar" style="display: none;">
