docs: update keywords

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>PolyForest&reg; Time</title>
 	<meta name="description" content="Simple Time Tracking via Google Sheets API">
+	<meta name="keywords" content="time tracking, timesheet, PolyForest Time, Google Sheets time tracking, Google Drive timesheet, time tracker, open source time tracking, project time tracking, billing, work hours">
 	<meta charset="utf-8"/>
 	<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
